--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+   <header>
+       <nav>
+           <li><a href="#">Quiz-Game</a></li>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Progress</a></li>
+                </ul>
+                <li><a href="#">Login</a></li>
+                <li><a href="#">Sign up</a></li>
+                <img src="" alt="user-pic">
+       </nav>
+   </header>
 </body>
 </html>
