--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PP2 Quiz Game</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <header>
        <nav>
-           <li><a href="#">Quiz-Game</a></li>
+           <li class="home-link"><a href="#">Quiz-Game</a></li>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Progress</a></li>
+                    <li class="main-nav"><a href="index.html">Home</a></li>
+                    <li class="main-nav"><a href="#">About</a></li>
+                    <li class="main-nav"><a href="#">Progress</a></li>
                 </ul>
-                <li><a href="#">Login</a></li>
-                <li><a href="#">Sign up</a></li>
-                <img src="" alt="user-pic">
+                <div class="right-links">
+                    <li class="login"><a href="#">Login</a></li>
+                    <li class="sign-up"><a href="#">Sign up</a></li>
+                    <img src="images/user.png" alt="user-pic" width="30" height="30"> 
+                </div>
        </nav>
    </header>
 </body>
