--- a/index.html
+++ b/index.html
@@ -6,22 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PP2 Quiz Game</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Yuji+Mai&display=swap" rel="stylesheet">
 </head>
 <body>
    <header>
        <nav>
-           <li class="home-link"><a href="#">Quiz-Game</a></li>
+           <div class="first-div">
+                <li class="home-link"><a href="index.html">Quiz-Game</a></li>
+           </div>
                 <ul>
                     <li class="main-nav"><a href="index.html">Home</a></li>
-                    <li class="main-nav"><a href="#">About</a></li>
+                    <li class="main-nav"><a href="#">About Quiz-Game</a></li>
                     <li class="main-nav"><a href="#">Progress</a></li>
                 </ul>
-                <div class="right-links">
-                    <li class="login"><a href="#">Login</a></li>
-                    <li class="sign-up"><a href="#">Sign up</a></li>
-                    <img src="images/user.png" alt="user-pic" width="30" height="30"> 
-                </div>
        </nav>
    </header>
+   <main>
+       <h1>Topics</h1>
+   </main>
+   <footer>
+        <div class="footer">
+            <p><a href="index.html">Quiz-Game</a></p>
+            <p>copyright&copyQuiz-Game 2021.</p>
+        </div>
+   </footer>
 </body>
 </html>
