--- a/about.html
+++ b/about.html
@@ -17,24 +17,15 @@
                 <ul>
                     <li class="main-nav"><a href="join.html">Join</a></li>
                     <li class="main-nav"><a href="index.html">Home</a></li>
-                    <li class="main-nav"><a href="">About Quiz-Game</a></li>
+                    <li class="main-nav"><a href="#">About Quiz-Game</a></li>
                 </ul>
        </nav>
    </header>
    <main>
-            <h1>Join here</h1>
-                <div id="flip-card">
-                <div class="join">
-                    <p class="card-text">Enter your name</p><br><br>
-                    <form action="/action_page.php" method="get">
-                        <input type="text" id="fname" name="fname"><br><br>
-                        <input type="submit" value="Submit">
-                      </form>
-                    <!-- <div class="flip-card-back"><button id="flip-card-btn-turn-to-front" class="myButton">flip back</button>
-                    </div> -->
-                </div>
-            </div>
-
+       <div class="about">
+            <h1>About Quiz-Game</h1>
+            <p class="about-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates non aliquam facere amet, asperiores nulla quas aspernatur vitae ratione earum a ea nam rerum laborum vel debitis? Earum quia quibusdam alias. Eligendi neque soluta molestiae quas dignissimos, quae tempora, facere distinctio similique odio consequuntur laudantium perspiciatis reprehenderit eos, nostrum aperiam. Voluptatum odit, inventore suscipit velit quibusdam voluptatem fugit tenetur aperiam illum? Quis similique nemo obcaecati a repellendus vero tempore eius quod autem adipisci ipsa nulla odio suscipit sint ipsam molestiae, porro quae nesciunt est nam deserunt non labore neque minima. Nisi alias, totam perspiciatis consequatur eaque itaque omnis voluptas dolore!</p>
+       </div>
    </main>
    <footer>
         <div class="footer">
