--- a/index.html
+++ b/index.html
@@ -28,18 +28,15 @@
                 <div id="flip-card">
                     <div class="div-one">
                         <p class="card-text">Sports</p>
-                        <button class="myButton">Play</button>
-                        <!-- <div class="flip-card-back"><button id="flip-card-btn-turn-to-front" class="myButton">flip back</button>
-                        </div> -->
+                        <button class="myButton"><a href="sports.html">Play</a></button>
+                        
                     </div>
                 </div>
 
                 <div id="flip-card">
                     <div class="div-one flip-card-front">
                         <p class="card-text">Movies</p>
-                        <button class="myButton">Play</button>
-                        <!-- <div class="flip-card-back"><button id="flip-card-btn-turn-to-front">flip back</button>
-                        </div> -->
+                        <button class="myButton"><a href="movies.html">Play</a></button>
                     </div>
                 </div>
 
@@ -47,8 +44,6 @@
                     <div class="div-one flip-card-front">
                         <p class="card-text">Three</p>
                         <button class="myButton">Play</button>
-                        <!-- <div class="flip-card-back"><button id="flip-card-btn-turn-to-front">flip back</button>
-                        </div> -->
                     </div>
                 </div>
             
