--- a/movies.html
+++ b/movies.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz Game | Join</title>
+    <title>Quiz Game | Movies</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Yuji+Mai&display=swap" rel="stylesheet">
 </head>
@@ -22,18 +22,26 @@
        </nav>
    </header>
    <main>
-            <h1>Join here</h1>
-                <div id="flip-card">
-                <div class="join">
-                    <div class="info">
-                        <p class="card-text">Enter your name</p><br><br>
-                        <form action="/action_page.php" method="get">
-                            <input type="text" id="fname" name="fname"><br><br>
-                            <input type="submit" value="Submit">
-                        </form>
+            <h1>Movie Questions</h1>
+            <div id="flip-card">
+                <div class="sports">
+                    <div class="questions">
+                        <p class="card-text">Sport questions</p><br><br>
+                        <div class="hud-item">
+                            <p id="progressText" class="hud-prefix">Question</p>
+                            <div id="progressBar">
+                                <div id="progressBarFull"></div>
+                            </div>
+                        </div>
+                        <div class="hud-item">
+                            <p class="hud-prefix">
+                                score
+                            </p>
+                            <h1 class="hud-main-text" id="score">
+                                0
+                            </h1>
+                        </div>
                     </div>
-                    <!-- <div class="flip-card-back"><button id="flip-card-btn-turn-to-front" class="myButton">flip back</button>
-                    </div> -->
                 </div>
             </div>
 
