Add Placeholder questions and progress bar

--- a/movies.html
+++ b/movies.html
@@ -22,11 +22,12 @@
        </nav>
    </header>
    <main>
-            <h1>Movie Questions</h1>
+       <section>
+        <h1>Movie Questions</h1>
             <div id="flip-card">
                 <div class="sports">
                     <div class="questions">
-                        <p class="card-text">Sport questions</p><br><br>
+                        <p class="card-text">Movie questions</p><br><br>
                         <div class="hud-item">
                             <p id="progressText" class="hud-prefix">Question</p>
                             <div id="progressBar">
@@ -42,9 +43,27 @@
                             </h1>
                         </div>
                     </div>
+                    <div id="quesiton">What is the answer to this question</div>
+                        <div class="choice-container">
+                            <p class="choice-prefix">A</p>
+                            <p class="choice-text" data-number="1">Choice</p>
+                        </div>
+                        <div class="choice-container">
+                            <p class="choice-prefix">B</p>
+                            <p class="choice-text" data-number="2">Choice 2</p>
+                        </div>
+                        <div class="choice-container">
+                            <p class="choice-prefix">C</p>
+                            <p class="choice-text" data-number="3">Choice 3</p>
+                        </div>
+                        <div class="choice-container">
+                            <p class="choice-prefix">D</p>
+                            <p class="choice-text" data-number="4">Choice 4</p>
+                        </div>
+                   
                 </div>
             </div>
-
+       </section>
    </main>
    <footer>
         <div class="footer">
@@ -52,5 +71,6 @@
             <p>copyright&copyQuiz-Game 2021.</p>
         </div>
    </footer>
+   <script src="game.js"></script>
 </body>
 </html>
