--- a/sports.html
+++ b/sports.html
@@ -22,7 +22,8 @@
        </nav>
    </header>
    <main>
-            <h1>Sport Questions</h1>
+       <section>
+        <h1>Sport Questions</h1>
             <div id="flip-card">
                 <div class="sports">
                     <div class="questions">
@@ -42,9 +43,27 @@
                             </h1>
                         </div>
                     </div>
+                    <div id="quesiton">What is the answer to this question</div>
+                    <div class="choice-container">
+                        <p class="choice-prefix">A</p>
+                        <p class="choice-text" data-number="1">Choice</p>
+                    </div>
+                    <div class="choice-container">
+                        <p class="choice-prefix">B</p>
+                        <p class="choice-text" data-number="2">Choice 2</p>
+                    </div>
+                    <div class="choice-container">
+                        <p class="choice-prefix">C</p>
+                        <p class="choice-text" data-number="3">Choice 3</p>
+                    </div>
+                    <div class="choice-container">
+                        <p class="choice-prefix">D</p>
+                        <p class="choice-text" data-number="4">Choice 4</p>
+                    </div>
                 </div>
             </div>
-
+       </section>
+            
    </main>
    <footer>
         <div class="footer">
