--- a/sports.html
+++ b/sports.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Yuji+Mai&display=swap" rel="stylesheet">
 </head>
 <body>
-   <header>
+   <header class="example">
        <nav>
            <div class="first-div">
                 <li class="home-link"><a href="index.html">Quiz-Game</a></li>
@@ -17,7 +17,7 @@
                 <ul>
                     <li class="main-nav"><a href="join.html">Join</a></li>
                     <li class="main-nav"><a href="index.html">Home</a></li>
-                    <li class="main-nav"><a href="">About Quiz-Game</a></li>
+                    <li class="main-nav"><a href="about.html">About Quiz-Game</a></li>
                 </ul>
        </nav>
    </header>
@@ -43,7 +43,7 @@
                             </h1>
                         </div>
                     </div>
-                    <div id="quesiton">What is the answer to this question</div>
+                    <h1 id="quesiton">What is the answer to this question</h1>
                     <div class="choice-container">
                         <p class="choice-prefix">A</p>
                         <p class="choice-text" data-number="1">Choice</p>
@@ -71,5 +71,6 @@
             <p>copyright&copyQuiz-Game 2021.</p>
         </div>
    </footer>
+   <script src="index.js"></script>
 </body>
 </html>
