--- a/movies.html
+++ b/movies.html
@@ -43,7 +43,7 @@
                             </h1>
                         </div>
                     </div>
-                    <div id="quesiton">What is the answer to this question</div>
+                    <h1 id="quesiton">What is the answer to this question</h1>
                         <div class="choice-container">
                             <p class="choice-prefix">A</p>
                             <p class="choice-text" data-number="1">Choice</p>
@@ -71,6 +71,6 @@
             <p>copyright&copyQuiz-Game 2021.</p>
         </div>
    </footer>
-   <script src="game.js"></script>
+   <script src="index.js"></script>
 </body>
 </html>
