--- a/sports.html
+++ b/sports.html
@@ -28,14 +28,14 @@
                 <div class="sports">
                     <div class="questions">
                         <p class="card-text">Sport questions</p><br><br>
-                        <div class="hud-item">
-                            <p id="progressText" class="hud-prefix">Question</p>
+                        <div>
+                            <p>Question</p>
                             <div id="progressBar">
                                 <div id="progressBarFull"></div>
                             </div>
                         </div>
-                        <div class="hud-item">
-                            <p class="hud-prefix">
+                        <div>
+                            <p>
                                 score
                             </p>
                             <h1 class="hud-main-text" id="score">
@@ -45,20 +45,16 @@
                     </div>
                     <h1 id="quesiton">What is the answer to this question</h1>
                     <div class="choice-container">
-                        <p class="choice-prefix">A</p>
-                        <p class="choice-text" data-number="1">Choice</p>
+                        <p class="choice-text" data-number="1">Choice A</p>
                     </div>
                     <div class="choice-container">
-                        <p class="choice-prefix">B</p>
-                        <p class="choice-text" data-number="2">Choice 2</p>
+                        <p class="choice-text" data-number="2">Choice B</p>
                     </div>
                     <div class="choice-container">
-                        <p class="choice-prefix">C</p>
-                        <p class="choice-text" data-number="3">Choice 3</p>
+                        <p class="choice-text" data-number="3">Choice C</p>
                     </div>
                     <div class="choice-container">
-                        <p class="choice-prefix">D</p>
-                        <p class="choice-text" data-number="4">Choice 4</p>
+                        <p class="choice-text" data-number="4">Choice D</p>
                     </div>
                 </div>
             </div>
