Changed Join link to login

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
    <header>
        <nav>
            <div class="first-div">
-                <li class="home-link"><a href="/index.html">Quiz-Game</a></li>
+                <li class="home-link"><a href="index.html">Quiz-Game</a></li>
            </div>
                 <ul>
-                    <li class="main-nav"><a href="/join.html">Join</a></li>
-                    <li class="main-nav"><a href="/index.html">Home</a></li>
-                    <li class="main-nav"><a href="/about.html">About Quiz-Game</a></li>
+                    <li class="main-nav"><a href="login.html">Log in</a></li>
+                    <li class="main-nav"><a href="index.html">Home</a></li>
+                    <li class="main-nav"><a href="about.html">About Quiz-Game</a></li>
                 </ul>
        </nav>
    </header>
