--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz Game | Join</title>
+    <title>Quiz Game | Log in</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Yuji+Mai&display=swap" rel="stylesheet">
 </head>
@@ -15,27 +15,27 @@
                 <li class="home-link"><a href="index.html">Quiz-Game</a></li>
            </div>
                 <ul>
-                    <li class="main-nav"><a href="join.html">Join</a></li>
+                    <li class="main-nav"><a href="login.html">Log in</a></li>
                     <li class="main-nav"><a href="index.html">Home</a></li>
-                    <li class="main-nav"><a href="">About Quiz-Game</a></li>
+                    <li class="main-nav"><a href="about.html">About Quiz-Game</a></li>
                 </ul>
        </nav>
    </header>
    <main>
         <section>
-            <h1>Join here</h1>
+            <h1>Log in here</h1>
             <div id="flip-card">
             <div class="join">
                 <div class="info">
                     <p class="card-text">Enter your name</p><br><br>
                     <form method="get">
                         <input type="text" id="fname" name="fname"><br><br>
-                        <input type="submit" value="Submit">
+                        <input class="myButton" type="submit" value="Submit">
                     </form>
                     <p class="card-text">Enter your name to save your score</p><br><br>
                     <form method="get">
                         <input type="text" id="fname" name="fname"><br><br>
-                        <input type="submit" value="Submit">
+                        <input class="myButton" type="submit" value="Submit">
                     </form>
                 </div>
             </div>
