Changed width size

--- a/login.html
+++ b/login.html
@@ -33,10 +33,12 @@
                         <input class="myButton" type="submit" value="Submit">
                     </form>
                     <p class="card-text">Enter your name to save your score</p><br><br>
-                    <form method="get">
+                    <form method="post">
                         <input type="text" id="fname" name="fname"><br><br>
                         <input class="myButton" type="submit" value="Submit">
                     </form>
+                    <p class="card-text">Top Score:</p>
+                    <a href="#">Reset Score</a>
                 </div>
             </div>
         </div>
