--- a/sports.html
+++ b/sports.html
@@ -15,7 +15,7 @@
                 <li class="home-link"><a href="index.html">Quiz-Game</a></li>
            </div>
                 <ul>
-                    <li class="main-nav"><a href="join.html">Join</a></li>
+                    <li class="main-nav"><a href="login.html">Log in</a></li>
                     <li class="main-nav"><a href="index.html">Home</a></li>
                     <li class="main-nav"><a href="about.html">About Quiz-Game</a></li>
                 </ul>
@@ -24,7 +24,6 @@
    <main>
        <section>
         <h1>Sport Questions</h1>
-            <div id="flip-card">
                 <div class="sports">
                     <div class="questions">
                         <p class="card-text">Sport questions</p><br><br>
@@ -57,7 +56,6 @@
                         <p class="choice-text" data-number="4">Choice D</p>
                     </div>
                 </div>
-            </div>
        </section>
             
    </main>
