--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
        <div class="container">
                     <div class="div-one">
                         <p class="card-text">Sports</p>
-                        <button class="myButton"><a href="/sports.html">Play</a></button>
+                        <button class="myButton"><a href="sports.html">Play</a></button>
                     </div>
 
                     <div class="div-one">
                         <p class="card-text">Movies</p>
-                        <button class="myButton"><a href="/movies.html">Play</a></button>
+                        <button class="myButton"><a href="movies.html">Play</a></button>
                     </div>
                 
                     <div class="div-one">
                         <p class="card-text">Three</p>
-                        <button class="myButton">Play</button>
+                        <button>Play</button>
                     </div>
             
                     <div class="div-one">
