--- a/movies.html
+++ b/movies.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -39,7 +39,7 @@
                                 score
                             </p>
                             <h1>
-                                0
+                                
                             </h1>
                         </div>
                     </div>
@@ -69,4 +69,4 @@
    </footer>
    <script src="index.js"></script>
 </body>
-</html>
+</html> -->
