--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
            </div>
            <ul>
                 <li class="main-nav"><a href="index.html">Log in</a></li>
-                <li class="main-nav"><a href="#">Home</a></li>
+                <li class="main-nav"><a href="home.html">Home</a></li>
                 <li class="main-nav"><a href="#">About Quiz-Game</a></li>
             </ul>
         </nav>
