--- a/home.html
+++ b/home.html
@@ -20,5 +20,26 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <h1>Topics</h1>
+        <div class="container">
+            <div class="box-one">
+            </div>
+            <div class="box-one">
+            </div>
+            <div class="box-one">
+            </div>
+            <div class="box-one">
+            </div>
+            <div class="box-one">
+            </div>
+            <div class="box-one">
+            </div>
+        </div>
+    </main>
+    <footer class="footer">
+        <p><a href="index.html">Quiz-Game</a></p>
+        <p>copyright&copyQuiz-Game 2021.</p>
+      </footer>
 </body>
 </html>
