Add Buttons to home page

--- a/home.html
+++ b/home.html
@@ -24,16 +24,22 @@
         <h1>Topics</h1>
         <div class="container">
             <div class="box-one">
+                <p class="box-text"><button class="myButton">Play</button></p>
             </div>
             <div class="box-one">
+                <p class="box-text"><button class="myButton">Play</button></p>
             </div>
             <div class="box-one">
+                <p class="box-text"><button class="myButton">Play</button></p>
             </div>
             <div class="box-one">
+                <p class="box-text"><button class="myButton">Play</button></p>
             </div>
             <div class="box-one">
+                <p class="box-text"><button class="myButton">Play</button></p>
             </div>
             <div class="box-one">
+                <p class="box-text"><button class="myButton">Play</button></p>
             </div>
         </div>
     </main>
