Fix About Page and Text

--- a/about.html
+++ b/about.html
@@ -1,33 +1,31 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PP2 Quiz Game</title>
-    <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Yuji+Mai&display=swap" rel="stylesheet">
 </head>
 <body class="example">
-   <header>
-       <nav>
-           <div class="first-div">
-                <li class="home-link"><a href="index.html">Quiz-Game</a></li>
+    <header>
+        <nav>
+            <div class="first-page">
+                <li class="first-page"><a href="index.html">Quiz-Game</a></li>
            </div>
-                <ul>
-                    <li class="main-nav"><a href="login.html">Log in</a></li>
-                    <li class="main-nav"><a href="index.html">Home</a></li>
-                    <li class="main-nav"><a href="about.html">About Quiz-Game</a></li>
-                </ul>
-       </nav>
-   </header>
+           <ul>
+                <li class="main-nav"><a href="index.html">Log in</a></li>
+                <li class="main-nav"><a href="home.html">Home</a></li>
+                <li class="main-nav"><a href="about.html">About Quiz-Game</a></li>
+            </ul>
+        </nav>
+    </header>
    <main>
-       <section>
             <div class="about">
                 <h1>About Quiz-Game</h1>
                 <p class="about-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates non aliquam facere amet, asperiores nulla quas aspernatur vitae ratione earum a ea nam rerum laborum vel debitis? Earum quia quibusdam alias. Eligendi neque soluta molestiae quas dignissimos, quae tempora, facere distinctio similique odio consequuntur laudantium perspiciatis reprehenderit eos, nostrum aperiam. Voluptatum odit, inventore suscipit velit quibusdam voluptatem fugit tenetur aperiam illum? Quis similique nemo obcaecati a repellendus vero tempore eius quod autem adipisci ipsa nulla odio suscipit sint ipsam molestiae, porro quae nesciunt est nam deserunt non labore neque minima. Nisi alias, totam perspiciatis consequatur eaque itaque omnis voluptas dolore!</p>
         </div>
-       </section>
    </main>
    <footer>
         <div class="footer">
@@ -36,4 +34,4 @@
         </div>
    </footer>
 </body>
-</html> -->
+</html>
