--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
            <ul>
                 <li class="main-nav"><a href="index.html">Log in</a></li>
                 <li class="main-nav"><a href="home.html">Home</a></li>
-                <li class="main-nav"><a href="#">About Quiz-Game</a></li>
+                <li class="main-nav"><a href="about.html">About Quiz-Game</a></li>
             </ul>
         </nav>
     </header>
@@ -24,21 +24,27 @@
         <h1>Topics</h1>
         <div class="container">
             <div class="box-one">
+                <h2>Sports</h2>
                 <p class="box-text"><button class="myButton">Play</button></p>
             </div>
             <div class="box-one">
+                <h2>Movies</h2>
                 <p class="box-text"><button class="myButton">Play</button></p>
             </div>
             <div class="box-one">
+                <h2>Test</h2>
                 <p class="box-text"><button class="myButton">Play</button></p>
             </div>
             <div class="box-one">
+                <h2>Test</h2>
                 <p class="box-text"><button class="myButton">Play</button></p>
             </div>
             <div class="box-one">
+                <h2>Test</h2>
                 <p class="box-text"><button class="myButton">Play</button></p>
             </div>
             <div class="box-one">
+                <h2>Test</h2>
                 <p class="box-text"><button class="myButton">Play</button></p>
             </div>
         </div>
