--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
            <ul>
                 <li class="main-nav"><a href="index.html">Log in</a></li>
                 <li class="main-nav"><a href="home.html">Home</a></li>
-                <li class="main-nav"><a href="#">About Quiz-Game</a></li>
+                <li class="main-nav"><a href="about.html">About Quiz-Game</a></li>
             </ul>
         </nav>
     </header>
@@ -26,14 +26,14 @@
                 <p class="info-text">Enter your name</p><br><br>
                 <form method="get">
                     <div class="info">
-                        <input class="name" type="text" id="fname" name="fname"><br><br>
+                        <input class="name" type="text" placeholder="Username" id="fname" name="fname"><br><br>
                         <input class="myButton" type="submit" value="Submit">
                     </div>
                 </form>
                 <p class="info-text">Enter Your Total score</p><br><br>
                 <form method="post">
                     <div class="info">
-                        <input class="name" type="text" id="fname" name="fname"><br><br>
+                        <input class="name" type="text" placeholder="Enter Your Score" id="fname" name="fname"><br><br>
                         <input class="myButton" type="submit" value="Submit">
                     </div>
                 </form>
