--- a/sports.html
+++ b/sports.html
@@ -1,63 +1,30 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz Game | Sports</title>
-    <link rel="stylesheet" href="style.css">
+    <title>PP2 Quiz Game</title>
+      <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Yuji+Mai&display=swap" rel="stylesheet">
 </head>
-<body>
-   <header class="example">
-       <nav>
-           <div class="first-div">
-                <li class="home-link"><a href="index.html">Quiz-Game</a></li>
+<body class="example">
+    <header>
+        <nav>
+            <div class="first-page">
+                <li class="first-page"><a href="index.html">Quiz-Game</a></li>
            </div>
-                <ul>
-                    <li class="main-nav"><a href="login.html">Log in</a></li>
-                    <li class="main-nav"><a href="index.html">Home</a></li>
-                    <li class="main-nav"><a href="about.html">About Quiz-Game</a></li>
-                </ul>
-       </nav>
-   </header>
+           <ul>
+                <li class="main-nav"><a href="index.html">Log in</a></li>
+                <li class="main-nav"><a href="home.html">Home</a></li>
+                <li class="main-nav"><a href="about.html">About Quiz-Game</a></li>
+            </ul>
+        </nav>
+    </header>
    <main>
-       <section>
-        <h1>Sport Questions</h1>
-                <div class="sports">
-                    <div class="questions">
-                        <p class="card-text">Sport questions</p><br><br>
-                        <div>
-                            <p>Question</p>
-                            <div id="progressBar">
-                                <div id="progressBarFull"></div>
-                            </div>
-                        </div>
-                        <div>
-                            <p>
-                                score
-                            </p>
-                            <h1 class="hud-main-text" id="score">
-                                0
-                            </h1>
-                        </div>
-                    </div>
-                    <h1 id="quesiton">What is the answer to this question</h1>
-                    <div class="choice-container">
-                        <p class="choice-text" data-number="1">Choice A</p>
-                    </div>
-                    <div class="choice-container">
-                        <p class="choice-text" data-number="2">Choice B</p>
-                    </div>
-                    <div class="choice-container">
-                        <p class="choice-text" data-number="3">Choice C</p>
-                    </div>
-                    <div class="choice-container">
-                        <p class="choice-text" data-number="4">Choice D</p>
-                    </div>
-                </div>
-       </section>
-            
+    <h1>Sport Questions</h1>
+        <div class="sports">
+        </div>
    </main>
    <footer>
         <div class="footer">
@@ -65,6 +32,5 @@
             <p>copyright&copyQuiz-Game 2021.</p>
         </div>
    </footer>
-   <script src="index.js"></script>
 </body>
-</html> -->
+</html>
