Fixed Sports hidden page

--- a/sports.html
+++ b/sports.html
@@ -24,6 +24,24 @@
    <main>
     <h1>Sport Questions</h1>
         <div class="sports">
+            <p class="sports-text">Question</p>
+            <div class="progressbar">
+            </div>
+            <p class="sports-text">Score</p>
+            <p class="sports-text">0</p>
+            <p class="sports-text" id="quesiton">What is the answer to this question</p>
+            <div class="choice-container">
+                <p class="choice-text" data-number="1">Choice A</p>
+            </div>
+            <div class="choice-container">
+                <p class="choice-text" data-number="1">Choice A</p>
+            </div>
+            <div class="choice-container">
+                <p class="choice-text" data-number="1">Choice A</p>
+            </div>
+            <div class="choice-container">
+                <p class="choice-text" data-number="1">Choice A</p>
+            </div>
         </div>
    </main>
    <footer>
