Added New Topic

--- a/sports.html
+++ b/sports.html
@@ -34,13 +34,13 @@
                 <p class="choice-text" data-number="1">Choice A</p>
             </div>
             <div class="choice-container">
-                <p class="choice-text" data-number="1">Choice A</p>
+                <p class="choice-text" data-number="2">Choice B</p>
             </div>
             <div class="choice-container">
-                <p class="choice-text" data-number="1">Choice A</p>
+                <p class="choice-text" data-number="3">Choice C</p>
             </div>
             <div class="choice-container">
-                <p class="choice-text" data-number="1">Choice A</p>
+                <p class="choice-text" data-number="4">Choice D</p>
             </div>
         </div>
    </main>
