--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
    <main>
             <div class="about">
                 <h1>About Quiz-Game</h1>
-                <p class="about-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates non aliquam facere amet, asperiores nulla quas aspernatur vitae ratione earum a ea nam rerum laborum vel debitis? Earum quia quibusdam alias. Eligendi neque soluta molestiae quas dignissimos, quae tempora, facere distinctio similique odio consequuntur laudantium perspiciatis reprehenderit eos, nostrum aperiam. Voluptatum odit, inventore suscipit velit quibusdam voluptatem fugit tenetur aperiam illum? Quis similique nemo obcaecati a repellendus vero tempore eius quod autem adipisci ipsa nulla odio suscipit sint ipsam molestiae, porro quae nesciunt est nam deserunt non labore neque minima. Nisi alias, totam perspiciatis consequatur eaque itaque omnis voluptas dolore!</p>
+                <p class="about-text">Quiz-Game Is a Entertaining and fun game where you can figure out the answeres to the questions and progress by getting a score mark and you will be able to see your progress as you go.</p>
         </div>
    </main>
    <footer>
