--- a/home.html
+++ b/home.html
@@ -29,10 +29,10 @@
             </div>
             <div class="box-one">
                 <h2>Movies</h2>
-                <p class="box-text"><button class="myButton">Play</button></p>
+                <p class="box-text"><button class="myButton"><a href="movies.html">Play</a></button></p>
             </div>
             <div class="box-one">
-                <h2>Test</h2>
+                <h2>Music</h2>
                 <p class="box-text"><button class="myButton">Play</button></p>
             </div>
             <div class="box-one">
