--- a/home.html
+++ b/home.html
@@ -10,10 +10,8 @@
 <body>
     <header>
         <nav>
-            <div class="first-page">
-                <li class="first-page"><a href="index.html">Quiz-Game</a></li>
-           </div>
            <ul>
+                <li class="first-page"><a href="index.html">Quiz-Game</a></li>
                 <li class="main-nav"><a href="index.html">Log in</a></li>
                 <li class="main-nav"><a href="home.html">Home</a></li>
                 <li class="main-nav"><a href="about.html">About Quiz-Game</a></li>
@@ -21,30 +19,18 @@
         </nav>
     </header>
     <main>
-        <h1>Topics</h1>
+        <h1 class="topics">Topics</h1>
         <div class="container">
             <div class="box-one">
                 <h2>Sports</h2>
                 <p class="box-text"><button class="myButton"><a href="sports.html">Play</a></button></p>
             </div>
             <div class="box-one">
-                <h2>Movies</h2>
+                <h2>Space</h2>
                 <p class="box-text"><button class="myButton"><a href="movies.html">Play</a></button></p>
             </div>
             <div class="box-one">
-                <h2>Music</h2>
-                <p class="box-text"><button class="myButton">Play</button></p>
-            </div>
-            <div class="box-one">
-                <h2>Test</h2>
-                <p class="box-text"><button class="myButton">Play</button></p>
-            </div>
-            <div class="box-one">
-                <h2>Test</h2>
-                <p class="box-text"><button class="myButton">Play</button></p>
-            </div>
-            <div class="box-one">
-                <h2>Test</h2>
+                <h2>Movies</h2>
                 <p class="box-text"><button class="myButton">Play</button></p>
             </div>
         </div>
