--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 <body>
     <header>
         <nav>
-            <div class="first-page">
-                <li class="first-page"><a href="index.html">Quiz-Game</a></li>
-           </div>
            <ul>
+                <li class="main-nav"><a href="index.html">Quiz-Game</a></li>
                 <li class="main-nav"><a href="index.html">Log in</a></li>
                 <li class="main-nav"><a href="home.html">Home</a></li>
                 <li class="main-nav"><a href="about.html">About Quiz-Game</a></li>
