--- a/movies.html
+++ b/movies.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PP2 Quiz Game</title>
+    <title>Movie Quiz</title>
       <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Yuji+Mai&display=swap" rel="stylesheet">
 </head>
-<body class="example">
+<body>
     <header>
         <nav>
-            <div class="first-page">
-                <li class="first-page"><a href="index.html">Quiz-Game</a></li>
-           </div>
            <ul>
+                <li class="first-page"><a href="index.html">Quiz-Game</a></li>
                 <li class="main-nav"><a href="index.html">Log in</a></li>
                 <li class="main-nav"><a href="home.html">Home</a></li>
                 <li class="main-nav"><a href="about.html">About Quiz-Game</a></li>
@@ -22,7 +20,7 @@
         </nav>
     </header>
    <main>
-    <h1>Sport Questions</h1>
+    <h1>Movie Questions</h1>
         <div class="sports">
             <p class="sports-text">Question</p>
             <div class="progressbar">
@@ -31,17 +29,18 @@
             <p class="sports-text">0</p>
             <p class="sports-text" id="quesiton">What is the answer to this question</p>
             <div class="choice-container">
-                <p class="choice-text" data-number="1">Choice A</p>
+                <p class="choice-text">Choice A</p>
             </div>
             <div class="choice-container">
-                <p class="choice-text" data-number="2">Choice B</p>
+                <p class="choice-text">Choice B</p>
             </div>
             <div class="choice-container">
-                <p class="choice-text" data-number="3">Choice C</p>
+                <p class="choice-text">Choice C</p>
             </div>
             <div class="choice-container">
-                <p class="choice-text" data-number="4">Choice D</p>
-            </div>
+                <p class="choice-text">Choice D</p>
+            </div><br><br>
+            <button class="myButton" id="next">Next</button>
         </div>
    </main>
    <footer>
