--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 </head>
 <body>
     <header>
-        <nav>
-           <ul>
-                <li class="main-nav"><a href="index.html">Quiz-Game</a></li>
-                <li class="main-nav"><a href="index.html">Log in</a></li>
-                <li class="main-nav"><a href="home.html">Home</a></li>
-                <li class="main-nav"><a href="about.html">About Quiz-Game</a></li>
-            </ul>
-        </nav>
+        <nav class="navbar">
+            <ul>
+             <div class="first-page">
+                 <li class="first-page"><a href="index.html">Quiz-Game</a></li>
+            </div>
+                 <li class="main-nav"><a href="index.html">Log in</a></li>
+                 <li class="main-nav"><a href="home.html">Home</a></li>
+                 <li class="main-nav"><a href="about.html">About Quiz-Game</a></li>
+             </ul>
+         </nav>
     </header>
     <main>
         <h1>Quiz-Game</h1>
