Fixed html code mybutton styling and home html page

--- a/home.html
+++ b/home.html
@@ -20,18 +20,18 @@
     </header>
     <main>
         <h1 class="topics">Topics</h1>
-        <div class="container">
+        <div class="container-topics">
             <div class="box-one">
                 <h2>Sports</h2>
                 <p class="box-text"><button class="myButton"><a href="sports.html">Play</a></button></p>
             </div>
             <div class="box-one">
-                <h2>Space</h2>
+                <h2>Movies</h2>
                 <p class="box-text"><button class="myButton"><a href="movies.html">Play</a></button></p>
             </div>
             <div class="box-one">
-                <h2>Movies</h2>
-                <p class="box-text"><button class="myButton">Play</button></p>
+                <h2>litrature</h2>
+                <p class="box-text"><button class="myButton"><a href="litrature.html">Play</a></button></p>
             </div>
         </div>
     </main>
