--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
     <main>
         <h1>Quiz-Game</h1>
         <div class="info-box">
-                <p class="info-text">Enter your name</p><br><br>
-                <form method="get">
-                    <div class="info">
-                        <input class="name" type="text" placeholder="Username" id="fname" name="fname"><br><br>
-                        <input class="myButton" type="submit" value="Submit">
-                    </div>
-                </form>
-                <p class="info-text">Enter Your Total score</p><br><br>
-                <form method="post">
-                    <div class="info">
-                        <input class="name" type="text" placeholder="Enter Your Score" id="fname" name="fname"><br><br>
-                        <input class="myButton" type="submit" value="Submit">
-                    </div>
-                </form>
-                <p class="info-text">Top Score:</p>
-                <p class="info-text"><a href="#">Reset Score</a></p>
-        </div>
+            <p class="info-text">Enter your name</p><br><br>
+            <form method="get">
+                <div class="info">
+                    <input class="name" type="text" placeholder="Username" id="fname" name="fname"><br><br>
+                    <button id="button" class="myButton" type="submit" value="Submit">Submit Name</button>
+                </div>
+            </form>
+            <p class="info-text">Enter Your Total score</p><br><br>
+            <form method="post">
+                <div class="info">
+                    <input class="name" type="text" placeholder="Enter Your Score" id="fname" name="fname"><br><br>
+                    <button id="button" class="myButton" type="submit" value="Submit">Get Results</button>
+                </div>
+            </form>
+            <p class="info-text">Top Score:</p>
+            <p class="info-text"><a href="#">Reset Score</a></p>
+    </div>
     </main>
     <footer class="footer">
         <p><a href="index.html">Quiz-Game</a></p>
