Fixed all navigation for all pages

--- a/movies.html
+++ b/movies.html
@@ -10,38 +10,19 @@
 </head>
 <body>
     <header>
-        <nav>
-           <ul>
-                <li class="first-page"><a href="index.html">Quiz-Game</a></li>
-                <li class="main-nav"><a href="index.html">Log in</a></li>
-                <li class="main-nav"><a href="home.html">Home</a></li>
-                <li class="main-nav"><a href="about.html">About Quiz-Game</a></li>
-            </ul>
-        </nav>
+        <nav class="navbar">
+            <ul>
+             <div class="first-page">
+                 <li class="first-page"><a href="index.html">Quiz-Game</a></li>
+            </div>
+                 <li class="main-nav"><a href="index.html">Log in</a></li>
+                 <li class="main-nav"><a href="home.html">Home</a></li>
+                 <li class="main-nav"><a href="about.html">About Quiz-Game</a></li>
+             </ul>
+         </nav>
     </header>
    <main>
-    <h1>Movie Questions</h1>
-        <div class="sports">
-            <p class="sports-text">Question</p>
-            <div class="progressbar">
-            </div>
-            <p class="sports-text">Score</p>
-            <p class="sports-text">0</p>
-            <p class="sports-text" id="quesiton">What is the answer to this question</p>
-            <div class="choice-container">
-                <p class="choice-text">Choice A</p>
-            </div>
-            <div class="choice-container">
-                <p class="choice-text">Choice B</p>
-            </div>
-            <div class="choice-container">
-                <p class="choice-text">Choice C</p>
-            </div>
-            <div class="choice-container">
-                <p class="choice-text">Choice D</p>
-            </div><br><br>
-            <button class="myButton" id="next">Next</button>
-        </div>
+    
    </main>
    <footer>
         <div class="footer">
