--- a/sports.html
+++ b/sports.html
@@ -22,7 +22,55 @@
          </nav>
     </header>
    <main>
-    
+    <div class="container">
+        <div id="game" class="justify-center flex-column">
+            <h1>Sports</h1>
+            <div id="hud">
+                <div class="hud-item">
+                    <div id="progressText" class="hud-prefix">
+                        <p id="progressiontText" class="hud-prefix">
+                            Question
+                        </p>
+                        <div id="progressBar">
+                            <div id="progressBarFull"></div>
+                        </div>
+                    </div>
+                    <div class="hud-item">
+                        <p class="hud-prefix">
+                            Score
+                        </p>
+                        <h1 class="hud-main-text" id="score">
+                            0
+                        </h1>
+                    </div>
+                </div>
+                <h1 id="question">What is the Answer to this question</h1>
+                <div class="choice-container">
+                    <div class="container-text">
+                        <p class="choice-prefix">A</p>
+                        <p class="choice-text" data-number="1">Choice</p>
+                    </div>
+                </div>
+                <div class="choice-container">
+                    <div class="container-text">
+                        <p class="choice-prefix">B</p>
+                        <p class="choice-text" data-number="2">Choice</p>
+                    </div>
+                </div>
+                <div class="choice-container">
+                    <div class="container-text">
+                        <p class="choice-prefix">C</p>
+                        <p class="choice-text" data-number="3">Choice</p>
+                    </div>
+                </div>
+                <div class="choice-container">
+                    <div class="container-text">
+                        <p class="choice-prefix">D</p>
+                        <p class="choice-text" data-number="4">Choice</p>
+                    </div>
+                </div>
+            </div>
+        </div>
    </main>
    <footer>
         <div class="footer">
