Fixed Question area spacing

--- a/litrature.html
+++ b/litrature.html
@@ -24,7 +24,7 @@
    <main>
     <div class="container">
         <div id="game" class="justify-center flex-column">
-            <h1>Movie Questions</h1>
+            <h1>Litrature Questions</h1>
             <div id="hud">
                 <div class="hud-item">
                     <div id="progressText" class="hud-prefix">
