--- a/sports.html
+++ b/sports.html
@@ -24,7 +24,7 @@
    <main>
     <div class="container">
         <div id="game" class="justify-center flex-column">
-            <h1>Sports</h1>
+            <h1>Sports Questions</h1>
             <div id="hud">
                 <div class="hud-item">
                     <div id="progressText" class="hud-prefix">
