Fixed Styling for topics

--- a/index.html
+++ b/index.html
@@ -34,16 +34,15 @@
             <form method="post">
                 <div class="info">
                     <input class="name" type="text" placeholder="Enter Your Score" id="fname" name="fname"><br><br>
-                    <button id="button" class="myButton" type="submit" value="Submit">Get Results</button>
+                    <button id="button" class="myButton" type="button" value="Submit" onclick="submitName();">Submit Name</button>
                 </div>
             </form>
-            <p class="info-text">Top Score:</p>
-            <p class="info-text"><a href="#">Reset Score</a></p>
     </div>
     </main>
     <footer class="footer">
         <p><a href="index.html">Quiz-Game</a></p>
         <p>copyright&copyQuiz-Game 2021.</p>
       </footer>
+    <script src="index.js"></script>
 </body>
 </html>
