--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <form method="post">
                 <div class="info">
                     <input class="name" type="text" placeholder="Enter Your Score" id="fname" name="fname"><br><br>
-                    <button id="button" class="myButton" type="button" value="Submit" onclick="submitName();">Submit Name</button>
+                    <button id="sumbit" class="myButton" type="submit" value="Submit">Get Results</button>
                 </div>
             </form>
     </div>
