--- a/sports.html
+++ b/sports.html
@@ -78,6 +78,6 @@
             <p>copyright&copyQuiz-Game 2021.</p>
         </div>
    </footer>
-   <script src="/index.js"></script>
+   <script src="sports.js"></script>
 </body>
 </html>
