--- a/litrature.html
+++ b/litrature.html
@@ -78,5 +78,6 @@
             <p>copyright&copyQuiz-Game 2021.</p>
         </div>
    </footer>
+   <script src="game.js"></script>
 </body>
 </html>
