Removed Get Results Section and added multiple game questions

--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
         <div class="container-topics">
             <div class="box-one">
                 <h2>Sports</h2>
-                <p class="box-text"><button class="myButton"><a href="sports.html">Play</a></button></p>
+                <p class="box-text"><button id ="startGame" class="myButton"><a href="sports.html">Play</a></button></p>
             </div>
             <div class="box-one">
                 <h2>Movies</h2>
