--- a/index.html
+++ b/index.html
@@ -26,15 +26,8 @@
             <p class="info-text">Enter your name</p><br><br>
             <form method="get">
                 <div class="info">
-                    <input class="name" type="text" placeholder="Username" id="fname" name="fname"><br><br>
-                    <button id="button" class="myButton" type="submit" value="Submit">Submit Name</button>
-                </div>
-            </form>
-            <p class="info-text">Enter Your Total score</p><br><br>
-            <form method="post">
-                <div class="info">
-                    <input class="name" type="text" placeholder="Enter Your Score" id="fname" name="fname"><br><br>
-                    <button id="sumbit" class="myButton" type="submit" value="Submit">Get Results</button>
+                    <input class="name" type="text" placeholder="Username" id="username" name="fname"><br><br>
+                    <button id="button" class="myButton" type="button" value="Submit" onclick="submitName();">Submit Name</button>
                 </div>
             </form>
     </div>
