--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,35 +8,40 @@
     <title>Quiz-game</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <header>
         <nav class="navbar">
             <ul>
-             <div class="first-page">
-                 <li class="first-page"><a href="index.html">Quiz-Game</a></li>
-            </div>
-                 <li class="main-nav"><a href="index.html">Log in</a></li>
-                 <li class="main-nav"><a href="home.html">Home</a></li>
-                 <li class="main-nav"><a href="about.html">About Quiz-Game</a></li>
-             </ul>
-         </nav>
+                <div class="first-page">
+                    <li class="first-page"><a href="index.html">Quiz-Game</a></li>
+                </div>
+                <li class="main-nav"><a href="index.html">Log in</a></li>
+                <li class="main-nav"><a href="home.html">Home</a></li>
+                <li class="main-nav"><a href="about.html">About Quiz-Game</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <h1>Quiz-Game</h1>
         <div class="info-box">
-            <p class="info-text">Enter your name</p><br><br>
-            <form method="get">
-                <div class="info">
-                    <input class="name" type="text" placeholder="Username" id="username" name="fname"><br><br>
-                    <button id="button" class="myButton" type="button" value="Submit" onclick="submitName();">Submit Name</button>
-                </div>
-            </form>
-    </div>
+            <div class="user-name">
+                <p class="info-text">Enter your name</p><br><br>
+                <form method="get">
+                    <div class="info">
+                        <input class="name" type="text" placeholder="Username" id="username" name="fname"><br><br>
+                        <button id="button" class="myButton" type="button" value="Submit" onclick="submitName();">Submit
+                            Name</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </main>
     <footer class="footer">
         <p><a href="index.html">Quiz-Game</a></p>
         <p>copyright&copyQuiz-Game 2021.</p>
-      </footer>
+    </footer>
     <script src="index.js"></script>
 </body>
+
 </html>
