Converted questions to an object based on category

--- a/sports.html
+++ b/sports.html
@@ -78,6 +78,9 @@
             <p>copyright&copyQuiz-Game 2021.</p>
         </div>
    </footer>
+   <script>
+       let game = 'sports'
+   </script>
    <script src="game.js"></script>
 </body>
 </html>
