Added Iphone Media querys

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,17 +7,14 @@
     <title>Quiz-game</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-
 <body>
     <header>
-        <nav class="navbar">
+        <nav>
             <ul>
-                <div class="first-page">
-                    <li class="first-page"><a href="index.html">Quiz-Game</a></li>
-                </div>
-                <li class="main-nav"><a href="index.html">Log in</a></li>
-                <li class="main-nav"><a href="home.html">Home</a></li>
-                <li class="main-nav"><a href="about.html">About Quiz-Game</a></li>
+                <li><a href="index.html">Quiz-Game</a></li>
+                <li><a href="index.html">Log in</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="about.html">About Quiz-Game</a></li>
             </ul>
         </nav>
     </header>
