--- a/end.html
+++ b/end.html
@@ -9,14 +9,12 @@
 </head>
 <body>
     <header>
-        <nav class="navbar">
-           <ul>
-            <div class="first-page">
-                <li class="first-page"><a href="index.html">Quiz-Game</a></li>
-           </div>
-                <li class="main-nav"><a href="index.html">Log in</a></li>
-                <li class="main-nav"><a href="home.html">Home</a></li>
-                <li class="main-nav"><a href="about.html">About Quiz-Game</a></li>
+        <nav>
+            <ul>
+                <li><a href="index.html">Quiz-Game</a></li>
+                <li><a href="index.html">Log in</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="about.html">About Quiz-Game</a></li>
             </ul>
         </nav>
     </header>
