--- a/movies.html
+++ b/movies.html
@@ -10,16 +10,14 @@
 </head>
 <body>
     <header>
-        <nav class="navbar">
+        <nav>
             <ul>
-             <div class="first-page">
-                 <li class="first-page"><a href="index.html">Quiz-Game</a></li>
-            </div>
-                 <li class="main-nav"><a href="index.html">Log in</a></li>
-                 <li class="main-nav"><a href="home.html">Home</a></li>
-                 <li class="main-nav"><a href="about.html">About Quiz-Game</a></li>
-             </ul>
-         </nav>
+                <li><a href="index.html">Quiz-Game</a></li>
+                <li><a href="index.html">Log in</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="about.html">About Quiz-Game</a></li>
+            </ul>
+        </nav>
     </header>
    <main>
     <div class="container">
@@ -78,6 +76,9 @@
             <p>copyright&copyQuiz-Game 2021.</p>
         </div>
    </footer>
+   <script>
+       let game = 'movies'
+   </script>
    <script src="game.js"></script>
 </body>
 </html>
