Fixed spelling of literature

--- a/Literature.html
+++ b/Literature.html
@@ -23,7 +23,7 @@
    <main>
     <div class="container">
         <div id="game" class="justify-center flex-column">
-            <h1>Litrature Questions</h1>
+            <h1>Literature Questions</h1>
             <div id="hud">
                 <div class="hud-item">
                     <div id="progressText" class="hud-prefix">
