--- a/home.html
+++ b/home.html
@@ -31,8 +31,8 @@
                 <p class="box-text"><button class="myButton"><a href="movies.html">Play</a></button></p>
             </div>
             <div class="box-one">
-                <h2>litrature</h2>
-                <p class="box-text"><button class="myButton"><a href="litrature.html">Play</a></button></p>
+                <h2>Literature</h2>
+                <p class="box-text"><button class="myButton"><a href="Literature.html">Play</a></button></p>
             </div>
         </div>
     </main>
